# SpongeLOB

./: .gitignore  data.dvc  pyproject.toml
.dvc/: config
configs/: horizon_10min.yaml  horizon_1min.yaml  horizon_2min.yaml  horizon_5min.yaml
deeplob/: __init__.py  config.py  dataset.py  evaluate.py  features.py  logging_utils.py  model.py  test.py  train.py
notebooks/: horizon_comparison.ipynb  lob_eda.ipynb
scripts/: train_deeplob.py
