[project]
name = "spongelob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc[s3]>=3.67.1",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.15.16",
]
